src/css/humpinator.css
.humpinator-wrapper{
  display: inline-block;
  position: relative;
  overflow: hidden;
}
.humpinator-wrapper > .humpinator-label{
  color: white;
  background: rgba(0,0,0,0.6);
  padding: 5px;
  position: absolute;
  top: -60px;
  left: 0;
}
#leftdiv{
  min-height: 650px;
}
.humpinator-options > li{
  padding-left: 4px;
}
.humpinator-options li a{
  vertical-align: middle;
  position: relative;
  top: 1px
}
.humpinator-options input[type=checkbox] {
  vertical-align: middle;
  position: relative;
  margin: 0px;
  margin-right: 1px;
}

.humpinator-options > li.sub{
  padding-left: 1.5em !important;
}

div.humpinator-emoticon-set{
  width: 300px !important;
  height: 250px !important;
  overflow-y: scroll;
  overflow-x: hidden;
}
div.humpinator-emoticon-set > a {
  display: inline-block;
  width: 50px;
  height: 50px;
  overflow: hidden;
  margin-right: 5px;
  margin-bottom: 5px;
}
div.humpinator-emoticon-set > a > img {
  max-width: 100%;
  max-height: 100%;
}

.humpinator-emoticon-set::-webkit-scrollbar {
  width: 13px;
  height: 13px;
}

.humpinator-emoticon-set::-webkit-scrollbar:hover {
  height: 18px;
}

.humpinator-emoticon-set::-webkit-scrollbar-thumb:vertical {
  height: 50px;
  background: #384D70;
  border-width: 1px;
  border-style: solid;
  border-color: #7484A0;
}

.humpinator-emoticon-set::-webkit-scrollbar-track-piece {
  background-color: #7484A0;
}

/* Adjustments */

input.mainoption, input.liteoption{
  font-size: 11px !important;
  cursor: pointer;
  text-indent: 0px;
  padding: 4px 5px 4px 5px !important;
}

input[type="button"]{
  cursor: pointer;
}
input.mainoption:hover, input.liteoption:hover, input[type="button"]:hover{
  background-color: #4E6284;
  border: 1px solid #9DA7B8;
  color: gold;
}
td > input[type="checkbox"], td > span.gen{
  cursor: pointer;
}

input, textarea, select {
  text-indent: 0px !important;
}
select > option:not([style]){
  color: #333 !important;
}

/* pagination */
td.humpinator-pagination {
  padding-bottom: 7px;
}
td.humpinator-pagination > span.gensmall > a[href*="&start"], td.humpinator-pagination > span.gensmall > b{
  padding: 1px 7px 1px 7px;
  color: white;
  border: 1px solid #7484A0;
  background-color: #384D70;
  margin-right: 2px;
}
td.humpinator-pagination > span.gensmall > a[href*="&start"]:hover{
  background-color: #4E6284;
  border: 1px solid #9DA7B8;
  color: gold;
}

td.humpinator-pagination > span.gensmall > b{
  background-color: #384D70;
  border: 1px solid #858e9f;
  color: gold;
  padding: 1px 7px 1px 7px;
  font-size: 11px;
}

